@@ -6,64 +6,44 @@
 
     <groupId>org.autotune</groupId>
     <artifactId>autotune</artifactId>
-    <version>0.8.1</version>
+    <version>0.9</version>
     <properties>
-        <fabric8-version>7.4.0</fabric8-version>
-        <org-json-version>20240303</org-json-version>
-        <jetty-version>12.0.12</jetty-version>
-        <slf4j-version>2.17.1</slf4j-version>
+        <fabric8-version>7.6.0</fabric8-version>
+        <org-json-version>20250107</org-json-version>
+        <jetty-version>12.1.7</jetty-version>
+        <log4j-version>2.25.3</log4j-version>
         <java-version>25</java-version>
-        <prometheus-simpleclient>0.14.1</prometheus-simpleclient>
-        <gson-version>2.9.0</gson-version>
-        <maven-compiler-plugin-version>3.8.0</maven-compiler-plugin-version>
-        <maven-assembly-plugin-version>2.2</maven-assembly-plugin-version>
-        <appassembler-maven-plugin-version>1.1.1</appassembler-maven-plugin-version>
-        <apachehttpclient-version>4.5.13</apachehttpclient-version>
-        <gson-version>2.9.0</gson-version>
-        <postgresql-version>42.7.3</postgresql-version>
-        <hibernatecore-version>6.1.7.Final</hibernatecore-version>
-        <hibernatecp30-version>6.1.7.Final</hibernatecp30-version>
-        <hibernate-Validator>8.0.1.Final</hibernate-Validator>
-        <micrometer-version>1.9.9</micrometer-version>
-        <awssdk-version>2.40.5</awssdk-version>
+        <prometheus-simpleclient>0.16.0</prometheus-simpleclient>
+        <gson-version>2.13.2</gson-version>
+        <maven-compiler-plugin-version>3.13.0</maven-compiler-plugin-version>
+        <maven-assembly-plugin-version>3.7.1</maven-assembly-plugin-version>
+        <appassembler-maven-plugin-version>2.1.0</appassembler-maven-plugin-version>
+        <apachehttpclient-version>4.5.14</apachehttpclient-version>
+        <postgresql-version>42.7.10</postgresql-version>
+        <hibernatecore-version>6.6.44.Final</hibernatecore-version>
+        <hibernatecp30-version>6.6.44.Final</hibernatecp30-version>
+        <hibernate-Validator>8.0.3.Final</hibernate-Validator>
+        <micrometer-version>1.12.10</micrometer-version>
+        <awssdk-version>2.42.6</awssdk-version>
+        <jackson-version>2.21.1</jackson-version>
+        <evalex-version>3.6.0</evalex-version>
+        <mockito-version>5.21.0</mockito-version>
+        <kafka-version>4.2.0</kafka-version>
+        <maven-surefire-plugin-version>3.5.2</maven-surefire-plugin-version>
+        <argLine></argLine>
+        <surefireArgLine>-Dnet.bytebuddy.experimental=true</surefireArgLine>
     </properties>
     <dependencies>
         <dependency>
-            <groupId>com.pubnub</groupId>
-            <artifactId>pubnub-gson</artifactId>
-            <version>6.4.4</version>
-        </dependency>
-
-        <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.17.0</version>
-	</dependency>
-
-	<!-- jackson-databind is an internal dependency in pubnub-gson, upgrade this jar didn't seem to help. Check in future and remove this
-	     For now, including these dependencies explicitly to address the security vulnerabilities
-	 -->
+            <version>${jackson-version}</version>
+        </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.17.0</version>
-        </dependency>
-
-	<!-- snakeyaml and okio are internal dependencies in kubernetes-client, upgrading kubernetes client to latest needs code changes
-	     This needs to be looked into in future and resolved. For now, including these dependencies explicitly to address the security vulnerabilities
-	-->
-
-        <dependency>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-            <version>2.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.squareup.okio</groupId>
-            <artifactId>okio</artifactId>
-            <version>1.17.6</version>
+            <version>${jackson-version}</version>
         </dependency>
 
         <dependency>
@@ -109,15 +89,15 @@
         <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <version>${slf4j-version}</version>
+            <artifactId>log4j-slf4j2-impl</artifactId>
+            <version>${log4j-version}</version>
             <scope>compile</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>${slf4j-version}</version>
+            <version>${log4j-version}</version>
             <scope>compile</scope>
         </dependency>
 
@@ -128,16 +108,22 @@
         </dependency>
 
         <dependency>
-            <groupId>com.udojava</groupId>
+            <groupId>com.ezylang</groupId>
             <artifactId>EvalEx</artifactId>
-            <version>2.7</version>
+            <version>${evalex-version}</version>
         </dependency>
 
-        <!-- junit 5, unit test -->
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.3.1</version>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito-version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -151,12 +137,6 @@
         <dependency>
             <groupId>io.prometheus</groupId>
             <artifactId>simpleclient_hotspot</artifactId>
-            <version>${prometheus-simpleclient}</version>
-        </dependency>
-        <!-- Exposition HTTPServer-->
-        <dependency>
-            <groupId>io.prometheus</groupId>
-            <artifactId>simpleclient_httpserver</artifactId>
             <version>${prometheus-simpleclient}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/io.prometheus/simpleclient_servlet -->
@@ -178,7 +158,6 @@
             <version>${gson-version}</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
@@ -194,6 +173,13 @@
             <artifactId>hibernate-c3p0</artifactId>
             <version>${hibernatecp30-version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.mchange</groupId>
+            <artifactId>mchange-commons-java</artifactId>
+            <version>0.4.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
@@ -214,7 +200,7 @@
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>4.1.1</version>
+            <version>${kafka-version}</version>
         </dependency>
 
     </dependencies>
@@ -268,7 +254,15 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.0</version>
+                <version>${maven-surefire-plugin-version}</version>
+                <configuration>
+                    <failIfNoTests>true</failIfNoTests>
+                    <argLine>
+                        ${argLine} ${surefireArgLine}
+                        -XX:+EnableDynamicAgentLoading
+                        -javaagent:${settings.localRepository}/net/bytebuddy/byte-buddy-agent/1.17.7/byte-buddy-agent-1.17.7.jar
+                    </argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
